--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 	  					</div>
 							<div class="mapKey" style="width: 100%; height: 10%; max-width: 70vh;">
 								<div style="display: flex; flex-flow: row wrap; justify-content: center;">
-									<div class="keyItem"><img class="mediumIcon" src="../images/Broccoli.png"> Healthy Options</div>
-									<div class="keyItem"><img class="mediumIcon" src="../images/Time.png"> Time Cost</div>
-									<div class="keyItem"><img class="mediumIcon" src="../images/Dollar.png"> Monetary Cost</div>
+									<div class="keyItem"><img class="mediumIcon" src="images/Broccoli.png"> Healthy Options</div>
+									<div class="keyItem"><img class="mediumIcon" src="images/Time.png"> Time Cost</div>
+									<div class="keyItem"><img class="mediumIcon" src="images/Dollar.png"> Monetary Cost</div>
 								</div>
 							</div>
   					</div>
